getNodeByNodePublicKey api endpoint added
